# MyExternalSort

./: .gitignore  CMakeLists.txt  ExternalSort.cpp  ExternalSort.h  MinHeap.cpp  MinHeap.h  README.md  external_sort.cpp  main.cpp
test/: generate_text_file.cpp
